<resources>
    <string name="app_name">Local Events</string>
    <!-- Buttons -->
    <string name="button_sign_in">Create a new Account</string>
    <string name="button_login">Login</string>
    <string name="button_event_location">Select a Location</string>
    <string name="button_event_image">Add a Image</string>
    <string name="button_event_add">Create new Event</string>
    <string name="button_select_date">Select a Date and Time</string>
    <string name="button_show_location">Show Location</string>
    <string name="button_save_changes">Save Changes</string>
    <string name="button_edit_user">Change your Userdata</string>
    <string name="button_change_event_image">Change Event image</string>
    <string name="button_delete_user">Delete my Account</string>
    <string name="button_signin_google">Signin with Google</string>

    <!-- Hints -->
    <string name="hint_enter_password">Enter a Password</string>
    <string name="hint_enter_username">Enter your Name</string>
    <string name="hint_wrong_user_data">Username,Email or Password are wrong</string>
    <string name="hint_event_name">Enter a Event Name</string>
    <string name="hint_event_costs">Enter Entrance Costs</string>
    <string name="hint_event_description">Enter a Description </string>
    <string name="hint_event_date">Select a Date and Time</string>
    <string name="hint_event_organizer">Enter a organizer</string>
    <string name="hint_new_user">Thank you for Signin in Local Events</string>
    <string name="hint_wrong_date">The date is in the past</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_email_exsits">This email already exists</string>

    <!-- Menu -->
    <string name="menu_addEvent">Add</string>
    <string name="menu_cancelEvent">Cancel</string>
    <string name="menu_event_overview">Events Overview</string>
    <string name="menu_my_events">My Events</string>
    <string name="menu_delete_event">Delete</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_Logout">Logout</string>
    <string name="menu_group_actions">Actions</string>
    <string name="menu_old_events">Old Events</string>
    <string name="menu_map">Event Map</string>

    <!-- Placeholders -->
    <string name="placeholder_image">Image</string>
    <string name="placeholder_name"> Event Name</string>
    <string name="placeholder_description">Event description</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_costs">Costs</string>
    <string name="placeholder_username">Name</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_email">Email</string>

    <!-- Others -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_settings">Settings</string>
    <string name="text_darkmode">Dark Mode</string>
    <string name="welcome_message">Welcome to Local Events</string>
    <string name="title_activity_map">Map</string>

</resources>
