<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/menu_group_actions">
        <menu>

            <item
                android:id="@+id/item_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"
                app:showAsAction="never"/>


        </menu>
    </item>


        <item android:title="@string/menu_profile">
          <menu>
              <group android:checkableBehavior="single">
              <item
                  android:id="@+id/item_profile"
                  android:icon="@drawable/ic_baseline_person_24"
                  android:title="@string/menu_profile"
                  app:showAsAction="never"/>
              <item
                  android:id="@+id/item_myEvents"
                  android:icon="@drawable/ic_my_events"
                  android:title="@string/menu_my_events"
                  app:showAsAction="never"/>

              <item
                  android:id="@+id/item_logout"
                  android:icon="@drawable/ic_logout"
                  android:title="@string/menu_Logout"
                  app:showAsAction="never"/>
              </group>
          </menu>
        </item>



</menu>