<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.EventActivity">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_1"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_event_name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="?android:attr/colorForeground"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_event_description"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="2"
                android:padding="8dp"
                android:textColor="?android:attr/colorForeground"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/event_organizer"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_event_organizer"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="?android:attr/colorForeground"
                android:textSize="14sp" />

            <NumberPicker
                android:id="@+id/event_costs"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints="hint"
                android:hint="@string/hint_event_costs"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/event_chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/purple_3"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_event_image"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/event_chooseLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/purple_3"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_event_location"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/purple_3"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_select_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/show_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="?android:attr/colorForeground" />

            <Button
                android:id="@+id/button_add_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/purple_3"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_event_add"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>